--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 anyhow = "1.0.52"
 pretty_env_logger = "0.5.0"
 # dioxus = {version = "0.6.1", features=["default", "desktop" , "router", "web"]}
-dioxus = { version = "0.6.3", features = ["logger", "desktop", "router"] }
-dioxus-sdk = { version = "0.6", features = ["storage"] }
+dioxus = {git = "https://github.com/DioxusLabs/dioxus.git", features=["desktop", "router"]}
+# dioxus-sdk = { version = "0.6", features = ["storage"] }
 # sled = "0.34.7"
 # chrono = "0.4.38"
 reqwest = {version = "0.12.12", features = ["json"]}
@@ -18,6 +18,7 @@ tokio = "1.43.0"
 regex = "1.11.1"
 log = "0.4.25"
 tracing = "0.1"
+base64 = "0.21"
 
 pulldown-cmark = "0.13"
 pulldown-cmark-escape = "0.11"
